Update configurations in Config.toml

--- a/Config.toml
+++ b/Config.toml
@@ -2,4 +2,10 @@
 clientId = "put-the-client-id-here"
 clientSecret = "put-the-client-secret-here"
 refreshToken = "put-the-refresh-token-here"
-refreshUrl = "https://oauth2.googleapis.com/token"
+email = "email-address-of-the-user"
+
+# These configurations are for the attendees of the event
+gmailClientId = "put-the-attendee-client-id-here"
+gmailClientSecret = "put-the-attendee-client-secret-here"
+gmailRefreshToken = "put-the-attendee-refresh-token-here"
+attendees = [] # Add the email addresses of the attendees here
